--- a/Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item bg-success my-auto p-2 rounded">
-        <p class="mb-0">Boobs are here</p>
+        <p class="mb-0">Egg is here</p>
     </li>
     <li class="nav-item">
         <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
