--- a/Web/Views/Battle/Index.cshtml
+++ b/Web/Views/Battle/Index.cshtml
@@ -23,12 +23,12 @@
                 <div class="modal-body fw-bold">
                     <div class="mb-2">
                         <label for="createName" class="form-label">Name</label>
-                        <input type="text" id="createName" name="Name" minlength="1" maxlength="@DataConfig.NameLength" value="@Model.BattleName" class="form-control" autocomplete="off">
+                        <input type="text" id="createName" name="battleName" minlength="1" maxlength="@DataConfig.NameLength" value="@Model.BattleName" class="form-control" autocomplete="off">
                     </div>
 
                     <div class="mb-2">
                         <label for="createCharacter1" class="form-label">First character</label> 
-                        <select id="createCharacter1" class="form-select">
+                        <select id="createCharacter1" name="characterName1" class="form-select">
                             @foreach (var name in Model.CharacterNames)
                             {
                                 <option value="@name">@name</option>
@@ -38,7 +38,7 @@
 
                     <div class="mb-2">
                         <label for="createCharacter2" class="form-label">Second character</label>
-                        <select id="createCharacter2" class="form-select">
+                        <select id="createCharacter2" name="characterName2" class="form-select">
                             @foreach (var name in Model.CharacterNames)
                             {
                                 <option value="@name">@name</option>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button asp-action="Create" type="submit" class="btn btn-primary">Create</button>
+                    <button asp-action="CreateNamedBattle" type="submit" class="btn btn-primary">Create</button>
                 </div>
             </form>
         </div>
