--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -42,6 +42,12 @@
                                 </li>
                             </ul>
                         </li>
+                        @if (User.Identity?.IsAuthenticated ?? false)
+                        {
+                            <li class="nva-item">
+                                <a class="nav-link text-dark" asp-controller="Personal" asp-action="Index">Your Creations</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
