--- a/Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -35,16 +35,7 @@
             <h3>Use another service to register.</h3>
             <hr />
             @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
+                if ((Model.ExternalLogins?.Count ?? 0) != 0)
                 {
                     <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
                         <div>
