--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -30,15 +30,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Battle" asp-action="Index">Battles</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link text-dark dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Country Attributes
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" asp-controller="NaturalResource">Natural Resources</a>
+                                    <a class="dropdown-item" asp-controller="NaturalResource" asp-action="Index">Natural Resources</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Specialty">Specialties</a>
+                                    <a class="dropdown-item" asp-controller="Specialty" asp-action="Index">Specialties</a>
                                 </li>
                             </ul>
                         </li>
